--- a/home/1_LLOYD/css/index.css
+++ b/home/1_LLOYD/css/index.css
@@ -62,23 +62,25 @@ button {
 }
 
 .eland {
+  position: relative;
   width: 1200px;
   height: 40px;
   margin: 0 auto;
 }
 
 .eland > ul {
+  position: absolute;
   display: block;
-  float: left;
-  width: 50%;
 }
 
 .eland .eland-site {
+  top: 0px;
+  left: 0px;
   height: 40px;
-  padding-left: 22px;
+  padding-left: 38px;
   background-image: url(../img/icons/header_lloyd.png);
   background-repeat: no-repeat;
-  background-position: 18% 0%;
+  background-position: 7% 0%;
 }
 
 .eland .eland-site li {
@@ -86,10 +88,15 @@ button {
   vertical-align: middle;
 }
 
+.eland .eland-site li:nth-child(3) a {
+  width: 100px;
+}
+
 .eland .eland-site li a {
   display: inline-block;
   width: 130px;
   height: 40px;
+  background: rgba(255, 192, 203, 0.5);
 }
 
 .eland .eland-site li select {
@@ -112,8 +119,25 @@ button {
   background-position: 98px -2px;
 }
 
-.eland .eland-site li ul {
-  display: block;
+.eland .eland-member {
+  top: 50%;
+  right: 70px;
+  -webkit-transform: translate(0%, -50%);
+          transform: translate(0%, -50%);
+}
+
+.eland .eland-member li {
+  display: inline-block;
+  font-size: 11px;
+}
+
+.eland .eland-member li img {
+  padding: 0px 10px;
+}
+
+.eland .eland-member .login {
+  position: fixed;
+  background: #999;
 }
 
 .text-ir {
