--- a/home/1_LLOYD/css/index.scss
+++ b/home/1_LLOYD/css/index.scss
@@ -36,7 +36,7 @@ button {cursor: pointer;}
 
 .eland {
   position: relative;
-  width: 1200px;
+  width: 1100px;
   height: 40px;
   margin: 0 auto;
 
@@ -49,10 +49,10 @@ button {cursor: pointer;}
     top: 0px;
     left: 0px;
     height: 40px;
-    padding-left: 38px;
+    // padding-left: 38px;
     background-image: url(../img/icons/header_lloyd.png);
     background-repeat: no-repeat;
-    background-position: 54px 0px;
+    // background-position: 54px 0px;
 
     .li-brand {
       &:hover {
@@ -66,15 +66,15 @@ button {cursor: pointer;}
       display: inline-block;
       vertical-align: middle;
 
-      &:nth-child(3) {
+      &:nth-child(2) {
         a {
-          width: 100px;
+          width: 133px;
         }
       }
 
       > a {
         display: inline-block;
-        width: 130px;
+        width: 110px;
         height: 40px;
       }
 
@@ -144,7 +144,7 @@ button {cursor: pointer;}
 
   .eland-member {
     top: 50%;
-    right: 70px;
+    right: 0px;
     transform: translate(0%, -50%);
 
     li {
@@ -165,6 +165,91 @@ button {cursor: pointer;}
     }
   }
 }
+
+.snb {
+  width: 1100px;
+  position: relative;
+  margin: 30px auto;
+
+  .sns {
+    width: 140px;
+    height: 45px;
+    background: url(../img/icons/header_lloyd.png) 0px -159px no-repeat;
+
+    >a {
+      display: inline-block;
+      width: 40px;
+      height: 40px;
+      border-radius: 20px;
+    }
+    >a+a {
+      margin-left: 6px;
+    }
+  }
+
+  h3 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    // text-align: center;
+  }
+
+  .search {
+    position: absolute;
+    top: 50%;
+    transform: translate(0%, -50%);
+    right: 0px;
+    width: 260px;
+    height: 40px;
+    background-color: #f3f3f3;
+    border-radius: 20px;
+
+    input {
+      width: 215px;
+      height: 100%;
+      border-radius: 20px;
+      padding-left: 5px;
+    }
+
+    button {
+      position: absolute;
+      top: 0%;
+      right: 0px;
+      width: 40px;
+      height: 40px;
+      border-radius: 20px;
+      background: url(../img/icons/header_lloyd.png) -175px -158px no-repeat;
+    }
+  }
+}
+
+.gnb {
+  position: relative;
+  background: #16391D;
+  color: #f2f2f2;
+
+  >ul {
+    width: 1100px;
+    // height: 40px;
+    margin: 0 auto;
+    overflow: hidden;
+
+    >li {
+      float: left;
+      padding: 0px 27px;
+      line-height: 40px;
+      
+      &:first-child {
+        width: 180px;
+      }
+    }
+  }
+}
+
+
+
+
 
 .text-ir {
   position: absolute;
